# irc.py

./: README.md  example-bot.py  pyproject.toml
.github/workflows/: main.yml
src/ircpy/: __init__.py  irc.py
src/ircpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
